number and string methods

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 <body>
 <div id="template"></div>
 <script type="text/javascript" src="./template_literals.js"></script>
+<script type="text/javascript" src="./number_and_string_methods.js"></script>
 </body>
 </html>
