default parameters and spread operator

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,8 @@
 <div id="template"></div>
 <script type="text/javascript" src="./template_literals.js"></script>
 <script type="text/javascript" src="./number_and_string_methods.js"></script>
+<script type="text/javascript" src="./default_params.js"></script>
+<script type="text/javascript" src="./spread_operator.js"></script>
+
 </body>
 </html>
