sets and set methods

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
 <script type="text/javascript" src="./number_and_string_methods.js"></script>
 <script type="text/javascript" src="./default_params.js"></script>
 <script type="text/javascript" src="./spread_operator.js"></script>
-
+<script type="text/javascript" src="./set.js"></script>
 </body>
 </html>
